<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_DeviceMode" Id="{8b0ffc1d-6cc3-445f-9483-60648040799d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_DeviceMode :
(
	AUTO,
	MANUAL,
	BYPASS,
	SIMULATION
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>