<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Alarm" Id="{a3c7b089-f562-48fd-a60b-6947886f89ef}">
    <Declaration><![CDATA[TYPE ST_Alarm :
STRUCT
	ePriority: E_AlarmPriority; 
	sLabel: STRING(255);
	bEnabled: BOOL := FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>